--- a/Aula10/Aula 10 - modelos lineares e regularizacao.ipynb
+++ b/Aula10/Aula 10 - modelos lineares e regularizacao.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**R:**"
+    "**R:**\n",
+    "\n"
    ]
   },
   {
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +685,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**R:**"
+    "**R:**\n",
+    "\n",
+    "Colocar o $\\alpha$ bem alto: Quando o parâmetro de regularização $\\alpha$ é definido como um valor alto, isso significa que a penalidade por coeficientes grandes é aumentada. Isso leva a uma restrição mais forte nos coeficientes do modelo. Como resultado, o modelo tende a ter coeficientes menores, o que pode levar a uma simplificação excessiva do modelo. Em outras palavras, o modelo pode se tornar muito simples e perder a capacidade de se ajustar bem aos dados de treinamento. Isso é especialmente verdadeiro para a regularização lasso, que pode até mesmo reduzir alguns coeficientes a zero, eliminando essas variáveis do modelo.\n",
+    "\n",
+    "Colocar o $\\alpha$ muito baixo: Quando o parâmetro de regularização $\\alpha$ é definido como um valor muito baixo, a penalidade por coeficientes grandes é reduzida. Isso permite que o modelo tenha coeficientes maiores, o que pode levar a um ajuste mais complexo e flexível aos dados de treinamento. No entanto, um valor muito baixo de $\\alpha$ pode levar ao overfitting, onde o modelo se ajusta muito bem aos dados de treinamento, mas não generaliza bem para novos dados.\n",
+    "\n",
+    "Diferença observada entre sem regularização / regularização ridge / regularização lasso / regularização elastic net:\n",
+    "\n",
+    "Sem regularização: Nesse caso, não há penalidade nos coeficientes do modelo. Isso permite que o modelo se ajuste perfeitamente aos dados de treinamento, mas pode levar ao overfitting, especialmente quando há muitas variáveis no modelo.\n",
+    "Regularização Ridge: A regularização ridge adiciona uma penalidade quadrática aos coeficientes do modelo. Isso leva a coeficientes menores, mas não necessariamente a zero. A regularização ridge é útil quando há multicolinearidade entre as variáveis, ou seja, quando as variáveis estão altamente correlacionadas entre si.\n",
+    "Regularização Lasso: A regularização lasso adiciona uma penalidade absoluta aos coeficientes do modelo. Isso leva a coeficientes menores e também pode reduzir alguns coeficientes a zero. A regularização lasso é útil para seleção de variáveis, pois pode eliminar variáveis irrelevantes do modelo.\n",
+    "Regularização Elastic Net: A regularização elastic net é uma combinação da regularização ridge e lasso. Ela adiciona uma penalidade que é uma combinação linear das penalidades da regularização ridge e lasso. A regularização elastic net é útil quando há multicolinearidade e também quando se deseja realizar seleção de variáveis.\n",
+    "Essas técnicas de regularização são úteis para controlar a complexidade do modelo e evitar overfitting, permitindo um melhor desempenho de generalização em dados não vistos."
    ]
   },
   {
@@ -712,7 +725,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**R:**"
+    "**R:**\n",
+    "\n",
+    "O fenômeno descrito é conhecido como \"early stopping\" e é uma forma de regularização usada para evitar o overfitting em modelos de aprendizado de máquina.\n",
+    "\n",
+    "No contexto do algoritmo de treinamento de descida de gradiente, à medida que iteramos mais e mais (cada iteração é chamada de \"epoch\"), o modelo continua a aprender e o erro de treinamento diminui. Isso significa que o modelo está se ajustando cada vez melhor aos dados de treinamento.\n",
+    "\n",
+    "No entanto, se também monitorarmos o erro de validação a cada epoch, notaremos que ele diminui inicialmente, mas depois de um certo ponto, começa a aumentar novamente. Isso ocorre porque, após um certo número de epochs, o modelo começa a se ajustar demais aos dados de treinamento e começa a aprender o ruído nos dados de treinamento, em vez da relação subjacente. Isso é conhecido como overfitting.\n",
+    "\n",
+    "Quando o modelo está superajustado, ele se sairá bem nos dados de treinamento, mas não generalizará bem para novos dados, o que é refletido no aumento do erro de validação. Portanto, uma estratégia é parar o treinamento quando o erro de validação atinge um mínimo e antes que comece a aumentar - daí o termo \"early stopping\". Isso permite que o modelo se ajuste suficientemente aos dados de treinamento, mas evita o overfitting, melhorando a capacidade do modelo de generalizar para novos dados."
    ]
   },
   {
