--- a/SimuladosPI/P2/prova_intermediaria_bcc_2023_2.ipynb
+++ b/SimuladosPI/P2/prova_intermediaria_bcc_2023_2.ipynb
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1747,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1809,13 +1809,13 @@
        "        -0.05698795,  0.00712585]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline, make_pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, FunctionTransformer\n",
     "import numpy as np\n",
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1876,7 @@
        "         1.00000000e+00,  2.00000000e+01,  4.00000000e+02]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
        "(85.27047712580239, 34.809701159696026)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
