--- a/Projeto1/projeto.ipynb
+++ b/Projeto1/projeto.ipynb
@@ -2452,8 +2452,8 @@
     }
    ],
    "source": [
-    "model_1_scores = model_scores.iloc[0].values  # scores of the best model (Random Forest)\n",
-    "model_2_scores = model_scores.iloc[-1].values  # scores of the worst model (Dummy Regressor)\n",
+    "model_1_scores = model_scores.iloc[0].values  # scores of the best model\n",
+    "model_2_scores = model_scores.iloc[-1].values  # scores of the worst model\n",
     "\n",
     "differences = model_1_scores - model_2_scores\n",
     "\n",
