--- a/SimuladosPF/af_ML_23_2/prova_final_eng_2023_2_gabarito.ipynb
+++ b/SimuladosPF/af_ML_23_2/prova_final_eng_2023_2_gabarito.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,16 +1284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6, 0, 6, ..., 3, 6, 4], dtype=int32)"
+       "array([6, 0, 6, ..., 3, 6, 4])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1706,12 +1706,257 @@
        "cluster              5.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "X_train.head().transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resposta - Questão 5 - Luca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adicionar a nova coluna 'cluster' aos conjuntos de treinamento e teste\n",
+    "cluster_train = pipeline.predict(X_train)\n",
+    "X_train['cluster'] = cluster_train\n",
+    "\n",
+    "cluster_test = pipeline.predict(X_test)\n",
+    "X_test['cluster'] = cluster_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>8785</th>\n",
+       "      <th>1686</th>\n",
+       "      <th>1709</th>\n",
+       "      <th>1063</th>\n",
+       "      <th>4738</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Area</th>\n",
+       "      <td>44793.000000</td>\n",
+       "      <td>44459.000000</td>\n",
+       "      <td>44652.000000</td>\n",
+       "      <td>39430.000000</td>\n",
+       "      <td>75389.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Perimeter</th>\n",
+       "      <td>804.334000</td>\n",
+       "      <td>758.560000</td>\n",
+       "      <td>779.929000</td>\n",
+       "      <td>755.532000</td>\n",
+       "      <td>1081.439000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MajorAxisLength</th>\n",
+       "      <td>306.717038</td>\n",
+       "      <td>257.030418</td>\n",
+       "      <td>292.067694</td>\n",
+       "      <td>236.769524</td>\n",
+       "      <td>423.120484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MinorAxisLength</th>\n",
+       "      <td>186.537550</td>\n",
+       "      <td>220.511271</td>\n",
+       "      <td>195.067915</td>\n",
+       "      <td>213.260046</td>\n",
+       "      <td>231.357165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AspectRation</th>\n",
+       "      <td>1.644264</td>\n",
+       "      <td>1.165611</td>\n",
+       "      <td>1.497262</td>\n",
+       "      <td>1.110239</td>\n",
+       "      <td>1.828863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Eccentricity</th>\n",
+       "      <td>0.793803</td>\n",
+       "      <td>0.513785</td>\n",
+       "      <td>0.744264</td>\n",
+       "      <td>0.434426</td>\n",
+       "      <td>0.837271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ConvexArea</th>\n",
+       "      <td>45254.000000</td>\n",
+       "      <td>44768.000000</td>\n",
+       "      <td>45012.000000</td>\n",
+       "      <td>40085.000000</td>\n",
+       "      <td>77225.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EquivDiameter</th>\n",
+       "      <td>238.814193</td>\n",
+       "      <td>237.922166</td>\n",
+       "      <td>238.438026</td>\n",
+       "      <td>224.062124</td>\n",
+       "      <td>309.819715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Extent</th>\n",
+       "      <td>0.698232</td>\n",
+       "      <td>0.766534</td>\n",
+       "      <td>0.789756</td>\n",
+       "      <td>0.782807</td>\n",
+       "      <td>0.761444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Solidity</th>\n",
+       "      <td>0.989813</td>\n",
+       "      <td>0.993098</td>\n",
+       "      <td>0.992002</td>\n",
+       "      <td>0.983660</td>\n",
+       "      <td>0.976225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>roundness</th>\n",
+       "      <td>0.870056</td>\n",
+       "      <td>0.970934</td>\n",
+       "      <td>0.922445</td>\n",
+       "      <td>0.868022</td>\n",
+       "      <td>0.810054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Compactness</th>\n",
+       "      <td>0.778614</td>\n",
+       "      <td>0.925658</td>\n",
+       "      <td>0.816379</td>\n",
+       "      <td>0.946330</td>\n",
+       "      <td>0.732226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ShapeFactor1</th>\n",
+       "      <td>0.006847</td>\n",
+       "      <td>0.005781</td>\n",
+       "      <td>0.006541</td>\n",
+       "      <td>0.006005</td>\n",
+       "      <td>0.005612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ShapeFactor2</th>\n",
+       "      <td>0.001552</td>\n",
+       "      <td>0.002618</td>\n",
+       "      <td>0.001792</td>\n",
+       "      <td>0.002971</td>\n",
+       "      <td>0.000995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ShapeFactor3</th>\n",
+       "      <td>0.606240</td>\n",
+       "      <td>0.856842</td>\n",
+       "      <td>0.666475</td>\n",
+       "      <td>0.895541</td>\n",
+       "      <td>0.536155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ShapeFactor4</th>\n",
+       "      <td>0.996819</td>\n",
+       "      <td>0.998745</td>\n",
+       "      <td>0.997888</td>\n",
+       "      <td>0.994264</td>\n",
+       "      <td>0.980553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cluster</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         8785          1686          1709          1063  \\\n",
+       "Area             44793.000000  44459.000000  44652.000000  39430.000000   \n",
+       "Perimeter          804.334000    758.560000    779.929000    755.532000   \n",
+       "MajorAxisLength    306.717038    257.030418    292.067694    236.769524   \n",
+       "MinorAxisLength    186.537550    220.511271    195.067915    213.260046   \n",
+       "AspectRation         1.644264      1.165611      1.497262      1.110239   \n",
+       "Eccentricity         0.793803      0.513785      0.744264      0.434426   \n",
+       "ConvexArea       45254.000000  44768.000000  45012.000000  40085.000000   \n",
+       "EquivDiameter      238.814193    237.922166    238.438026    224.062124   \n",
+       "Extent               0.698232      0.766534      0.789756      0.782807   \n",
+       "Solidity             0.989813      0.993098      0.992002      0.983660   \n",
+       "roundness            0.870056      0.970934      0.922445      0.868022   \n",
+       "Compactness          0.778614      0.925658      0.816379      0.946330   \n",
+       "ShapeFactor1         0.006847      0.005781      0.006541      0.006005   \n",
+       "ShapeFactor2         0.001552      0.002618      0.001792      0.002971   \n",
+       "ShapeFactor3         0.606240      0.856842      0.666475      0.895541   \n",
+       "ShapeFactor4         0.996819      0.998745      0.997888      0.994264   \n",
+       "cluster              6.000000      0.000000      6.000000      0.000000   \n",
+       "\n",
+       "                         4738  \n",
+       "Area             75389.000000  \n",
+       "Perimeter         1081.439000  \n",
+       "MajorAxisLength    423.120484  \n",
+       "MinorAxisLength    231.357165  \n",
+       "AspectRation         1.828863  \n",
+       "Eccentricity         0.837271  \n",
+       "ConvexArea       77225.000000  \n",
+       "EquivDiameter      309.819715  \n",
+       "Extent               0.761444  \n",
+       "Solidity             0.976225  \n",
+       "roundness            0.810054  \n",
+       "Compactness          0.732226  \n",
+       "ShapeFactor1         0.005612  \n",
+       "ShapeFactor2         0.000995  \n",
+       "ShapeFactor3         0.536155  \n",
+       "ShapeFactor4         0.980553  \n",
+       "cluster              5.000000  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exibir as primeiras linhas dos conjuntos de treinamento e teste\n",
     "X_train.head().transpose()"
    ]
   },
@@ -1878,6 +2123,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Resposta - Questão 6 - Luca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, PolynomialFeatures, StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Definir a sub-pipeline para as features originais\n",
+    "numeric_features = X_train.columns.drop('cluster')\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('poly', PolynomialFeatures(degree=2, include_bias=False)),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "# Definir a transformação para a feature 'cluster'\n",
+    "categorical_features = ['cluster']\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('onehot', OneHotEncoder())\n",
+    "])\n",
+    "\n",
+    "# Combinar transformações usando ColumnTransformer\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ])\n",
+    "\n",
+    "# Ajustar a pipeline ao conjunto de dados de treinamento e transformar os dados\n",
+    "X_train_processed = preprocessor.fit_transform(X_train)\n",
+    "X_test_processed = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Questão 7** (1,0 pt.): Avalie o desempenho de um modelo `LinearSVC` com coeficiente de regularização `C=1e2` nestes dados processados"
    ]
   },
@@ -1939,6 +2226,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Resposta - Questão 7 - Luca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lucam\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\svm\\_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    BARBUNYA       0.89      0.95      0.92       267\n",
+      "      BOMBAY       1.00      0.99      1.00       103\n",
+      "        CALI       0.95      0.91      0.93       330\n",
+      "    DERMASON       0.95      0.82      0.88       667\n",
+      "       HOROZ       0.94      0.96      0.95       395\n",
+      "       SEKER       0.98      0.79      0.87       404\n",
+      "        SIRA       0.72      0.92      0.81       557\n",
+      "\n",
+      "    accuracy                           0.89      2723\n",
+      "   macro avg       0.92      0.90      0.91      2723\n",
+      "weighted avg       0.90      0.89      0.89      2723\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lucam\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\svm\\_base.py:1237: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Assumindo que X_train_processed, X_test_processed, y_train e y_test já estão definidos\n",
+    "\n",
+    "# Treinar o modelo LinearSVC com coeficiente de regularização C=1e2\n",
+    "linear_svc = LinearSVC(C=1e2, random_state=42)\n",
+    "\n",
+    "# Ajustar o modelo aos dados de treinamento processados\n",
+    "linear_svc.fit(X_train_processed, y_train)\n",
+    "\n",
+    "# Fazer previsões nos dados de teste processados\n",
+    "y_pred = linear_svc.predict(X_test_processed)\n",
+    "\n",
+    "# Avaliar o desempenho do modelo usando classification report\n",
+    "report = classification_report(y_test, y_pred, target_names=classes)\n",
+    "\n",
+    "# Mostrar o classification report\n",
+    "print(report)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Questão 8** (1,5 pts.): Ao testar o desempenho do modelo `LinearSVC` variando o coeficiente de regularização eu obtive a seguinte curva:\n",
     "\n",
     "![Curvas de treino e teste variando C](./train_test.png)\n",
@@ -1968,7 +2326,70 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Resposta com ChatGPT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: lightblue; color:black; padding: 10px; border-radius: 5px;\">\n",
+    "\n",
+    "### Análise do Gráfico\n",
+    "\n",
+    "O gráfico mostra as curvas de acurácia de treino e teste variando o coeficiente de regularização \\(C\\). Aqui estão algumas observações:\n",
+    "\n",
+    "1. **Acurácia de Treino vs. Teste**:\n",
+    "   - Para valores baixos de \\(C\\) (alta regularização), a acurácia de treino e teste são baixas.\n",
+    "   - Conforme \\(C\\) aumenta, a acurácia de treino e teste aumentam, indicando que o modelo está se ajustando melhor aos dados.\n",
+    "   - Para valores altos de \\(C\\) (baixa regularização), a acurácia de treino é maior do que a acurácia de teste, indicando que o modelo pode estar sobreajustado aos dados de treinamento.\n",
+    "\n",
+    "2. **Sobreajuste (Overfitting)**:\n",
+    "   - Quando \\(C\\) é muito alto, a diferença entre as curvas de treino e teste aumenta, sugerindo que o modelo está se ajustando muito bem aos dados de treinamento, mas não está generalizando bem para novos dados. Isso é um indicativo de sobreajuste.\n",
+    "\n",
+    "### Como Corrigir o Sobreajuste\n",
+    "\n",
+    "Quando um modelo está sobreajustado, existem várias estratégias que podem ser usadas para corrigir o problema:\n",
+    "\n",
+    "1. **Aumentar a Regularização**:\n",
+    "   - Diminuir o valor de \\(C\\) para aumentar a regularização. Isso força o modelo a ser mais simples e menos propenso a capturar o ruído nos dados de treinamento.\n",
+    "\n",
+    "2. **Aumentar o Conjunto de Dados de Treinamento**:\n",
+    "   - Adicionar mais dados de treinamento pode ajudar o modelo a generalizar melhor, reduzindo o sobreajuste.\n",
+    "\n",
+    "3. **Simplificar o Modelo**:\n",
+    "   - Reduzir a complexidade do modelo (menos parâmetros, menos camadas em redes neurais, etc.) pode ajudar a evitar o sobreajuste.\n",
+    "\n",
+    "4. **Usar Técnicas de Regularização**:\n",
+    "   - Além de ajustar \\(C\\), outras técnicas de regularização como Dropout (em redes neurais), L1/L2 regularization, ou técnicas de ensemble como bagging e boosting podem ser usadas.\n",
+    "\n",
+    "### Desempenho Pós-Correção do Sobreajuste\n",
+    "\n",
+    "Após aplicar as correções de sobreajuste, espera-se que:\n",
+    "\n",
+    "1. **Redução da Acurácia de Treino**:\n",
+    "   - A acurácia no conjunto de treinamento pode diminuir, pois o modelo não estará mais ajustando-se tão perfeitamente aos dados de treino.\n",
+    "\n",
+    "2. **Melhoria na Acurácia de Teste**:\n",
+    "   - A acurácia no conjunto de teste deve aumentar, indicando que o modelo está generalizando melhor e performando bem em novos dados.\n",
+    "\n",
+    "### Resumo\n",
+    "\n",
+    "- **Está sobreajustado?**: Sim, o modelo está sobreajustado para valores altos de \\(C\\), conforme indicado pela diferença crescente entre as curvas de treino e teste.\n",
+    "- **O que fazer?**:\n",
+    "  - Aumentar a regularização (diminuir \\(C\\)).\n",
+    "  - Aumentar o conjunto de dados de treinamento.\n",
+    "  - Simplificar o modelo.\n",
+    "  - Usar outras técnicas de regularização.\n",
+    "- **Desempenho pós-correção**:\n",
+    "  - Acurácia de treino pode diminuir.\n",
+    "  - Acurácia de teste deve aumentar, indicando melhor generalização.\n",
+    "\n",
+    "Se precisar de mais detalhes ou assistência, estou à disposição!\n",
+    "\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
