--- a/PF/prova_final_eng_2024_1.ipynb
+++ b/PF/prova_final_eng_2024_1.ipynb
@@ -1336,7 +1336,136 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Tópico 1: Machine Learning e Sociedade\n",
+    "**Interlocutor: Marcos Lisboa (Economista)**\n",
+    "\n",
+    "**Explicação:** \n",
+    "\n",
+    "### Detecção de Fraudes na Receita Federal como uma aplicação de Machine Learning para Problemas Econômicos\n",
+    "\n",
+    "A Receita Federal do Brasil utiliza diversas ferramentas de machine learning para aumentar a eficácia na detecção de fraudes fiscais e melhorar a arrecadação de impostos. Essas ferramentas ajudam a identificar padrões anormais que podem indicar tentativas de evasão fiscal, desde declarações de imposto de renda até transações comerciais suspeitas.\n",
+    "\n",
+    "#### Modelos Utilizados na Detecção de Fraudes Fiscais\n",
+    "\n",
+    "1. **Algoritmos de Detecção de Anomalias**\n",
+    "   - **Exemplo Prático**: Isolation Forest, Local Outlier Factor (LOF)\n",
+    "   - **Como Funciona**: Estes algoritmos identificam dados que se comportam de maneira anômala em relação ao conjunto maior de dados. Isolation Forest, por exemplo, isola observações ao tentar dividir amostras usando árvores de decisão; quanto menos divisões são necessárias, mais anômala é a observação.\n",
+    "   - **Aplicação**: Utilizado para flagrar declarações de impostos que desviam significativamente dos padrões típicos, o que pode indicar uma potencial fraude ou erro na declaração.\n",
+    "\n",
+    "2. **Redes Neurais e Deep Learning**\n",
+    "   - **Exemplo Prático**: Redes Neurais Artificiais (ANNs), Autoencoders\n",
+    "   - **Como Funciona**: Redes neurais são poderosas para modelar complexas relações não-lineares nos dados. Autoencoders, uma forma especializada de rede neural, são treinados para reconstruir a entrada na saída; as discrepâncias na reconstrução podem indicar anomalias.\n",
+    "   - **Aplicação**: Empregadas para analisar grandes volumes de transações entre empresas, identificando comportamentos atípicos que podem sugerir manipulação de preços ou transferência irregular de recursos.\n",
+    "\n",
+    "3. **Análise de Cluster**\n",
+    "   - **Exemplo Prático**: K-Means, DBSCAN\n",
+    "   - **Como Funciona**: Estes algoritmos agrupam dados semelhantes com base em características definidas. Dados que não se encaixam bem em nenhum grupo podem ser considerados anômalos.\n",
+    "   - **Aplicação**: Usado para segmentar tipos de contribuintes ou empresas e identificar grupos que apresentam comportamentos fiscais atípicos que podem sugerir evasão.\n",
+    "\n",
+    "4. **Sistemas Baseados em Regras**\n",
+    "   - **Exemplo Prático**: Sistemas de lógica fuzzy, sistemas baseados em regras\n",
+    "   - **Como Funciona**: Combinam conhecimento do domínio fiscal com regras programadas para flagrar inconsistências ou violações específicas das normas tributárias.\n",
+    "   - **Aplicação**: Eficientes para monitorar transações específicas que devem seguir regulamentos fiscais claros, como limites de deduções ou obrigações de relatório para certos tipos de renda.\n",
+    "\n",
+    "### Conclusão\n",
+    "\n",
+    "A aplicação de técnicas avançadas de machine learning na detecção de fraudes fiscais tem potencial para transformar a eficácia da Receita Federal, melhorando a arrecadação de impostos e reduzindo a carga sobre os contribuintes honestos. A adoção dessas tecnologias permite uma abordagem mais proativa e baseada em dados para o combate à evasão fiscal, contribuindo para uma economia mais justa e equilibrada. Estas técnicas, combinadas com a expertise de economistas e especialistas em políticas públicas, podem levar a soluções inovadoras que abordem os desafios econômicos complexos do Brasil."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chat GPT utilizado com o seguinte prompt, além do enunciado da questão:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Para o tópico 1, especifique como machine learning pode ser particularmente útil para tópicos de economia que marcos lisboa estaria interessado, traga exemplos coerentes com o tema. Se aprofunde em um tema como detecção de fraudes fiscais, por exemplo, e explique como machine learning pode ser aplicado nesse contexto.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tópico 2: Validação Cruzada para Ajuste de Hiperparâmetros\n",
+    "**Interlocutor: Professor de Sociologia**\n",
+    "\n",
+    "**Explicação:**\n",
+    "\n",
+    "**Validação Cruzada para Ajuste de Hiperparâmetros: Aplicação em Políticas Públicas de Combate ao Desemprego**\n",
+    "\n",
+    "Vamos explorar como a técnica de validação cruzada para ajuste de hiperparâmetros pode ser aplicada para resolver problemas específicos da sociedade, como o combate ao desemprego. Esse problema é relevante para formuladores de políticas públicas e pode ser abordado de maneira mais eficaz utilizando técnicas avançadas de machine learning.\n",
+    "\n",
+    "#### O Que é Validação Cruzada e Ajuste de Hiperparâmetros?\n",
+    "\n",
+    "**Validação Cruzada**: \n",
+    "É uma técnica utilizada para avaliar a capacidade de generalização de um modelo de machine learning. Consiste em dividir o conjunto de dados em várias partes (folds) e, em cada iteração, um fold é usado para validação enquanto os demais são usados para treinamento. Esse processo é repetido até que cada fold tenha sido utilizado como conjunto de validação. A média das métricas de desempenho fornece uma estimativa robusta do desempenho do modelo.\n",
+    "\n",
+    "**Ajuste de Hiperparâmetros**:\n",
+    "Hiperparâmetros são parâmetros que definem a estrutura do modelo e como ele deve ser treinado. Diferentemente dos parâmetros que são aprendidos durante o treinamento (como os coeficientes em uma regressão linear), os hiperparâmetros são definidos antes do treinamento. Ajustar os hiperparâmetros significa encontrar a melhor combinação desses parâmetros para otimizar o desempenho do modelo.\n",
+    "\n",
+    "#### Aplicação Prática: Políticas Públicas de Combate ao Desemprego\n",
+    "\n",
+    "##### Contexto\n",
+    "\n",
+    "O desemprego é um problema crítico que afeta a estabilidade econômica e social de um país. Utilizando machine learning, podemos prever quais regiões ou setores estão mais suscetíveis ao aumento do desemprego e, assim, formular políticas públicas mais direcionadas e eficazes.\n",
+    "\n",
+    "##### Objetivo\n",
+    "\n",
+    "Utilizar técnicas de validação cruzada e ajuste de hiperparâmetros para desenvolver um modelo preditivo robusto que possa prever as taxas de desemprego, ajudando a implementar políticas públicas mais eficazes para combatê-lo.\n",
+    "\n",
+    "##### Exemplo Prático: Combate ao Desemprego em Regiões Específicas\n",
+    "\n",
+    "**Objetivo**:\n",
+    "Desenvolver um modelo preditivo para identificar regiões que estão em risco de aumento das taxas de desemprego, permitindo que o governo implemente políticas públicas direcionadas, como programas de treinamento profissional, incentivos fiscais para empresas, ou investimentos em infraestrutura.\n",
+    "\n",
+    "**Parâmetros Coletados**:\n",
+    "- **Indicadores Econômicos**: PIB per capita, nível de investimento em infraestrutura, taxa de crescimento econômico.\n",
+    "- **Indicadores Sociais**: Taxa de escolaridade, nível de renda média, taxa de criminalidade.\n",
+    "- **Indicadores Geográficos**: Urbanização, acesso a transporte público, densidade populacional.\n",
+    "\n",
+    "**Ajuste de Hiperparâmetros**:\n",
+    "- Utilizando validação cruzada, ajustamos hiperparâmetros de um modelo de Machine Learning (por exemplo, um classificador de árvore de decisão) para maximizar a precisão da previsão baseado nos indicadores coletados. (Não é importante o modelo em si, mas sim o processo de ajuste de hiperparâmetros para otimizar o desempenho).\n",
+    "- A busca em grade (Grid Search) pode testar várias combinações de hiperparâmetros, avaliando o desempenho do modelo em cada combinação para selecionar a melhor.\n",
+    "\n",
+    "**Resultado**:\n",
+    "O modelo preditivo identifica as regiões com maior risco de aumento do desemprego. Por exemplo, pode-se descobrir que regiões com baixa escolaridade e baixo investimento em infraestrutura têm uma maior probabilidade de aumento do desemprego.\n",
+    "\n",
+    "**Políticas Públicas Sugeridas**:\n",
+    "Após uso do modelo e validação cruzada, o governo pode implementar políticas específicas para essas regiões, de modo a mitigar o impacto do desemprego. Algumas sugestões incluem:\n",
+    "- **Programas de Treinamento Profissional**: Focar em regiões identificadas pelo modelo, oferecendo cursos de capacitação para aumentar a empregabilidade da população.\n",
+    "- **Incentivos Fiscais**: Oferecer incentivos fiscais para empresas que se estabeleçam em áreas de alto risco de desemprego, estimulando a criação de empregos.\n",
+    "- **Investimentos em Infraestrutura**: Alocar recursos para melhorar a infraestrutura em regiões vulneráveis, facilitando o acesso ao emprego e atraindo novas empresas.\n",
+    "\n",
+    "### Conclusão\n",
+    "\n",
+    "A validação cruzada e o ajuste de hiperparâmetros são técnicas poderosas para desenvolver modelos preditivos robustos que podem informar políticas públicas eficazes. Aplicando essas técnicas para prever o desemprego, podemos tomar decisões mais informadas e direcionadas, melhorando a eficácia das políticas públicas e contribuindo para uma sociedade mais justa e equitativa. Este é um exemplo claro de como técnicas avançadas de machine learning podem ter um impacto significativo e positivo na sociedade."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chat GPT utilizado com o seguinte prompt, além do enunciado da questão:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Eu quero uma resposta baseada em um problema prático e que seja paupável para políticas públicas, em que por meio de parâmetros que podem ser coletados uma determinada política pública poderia ser melhor executada. Esses parâmetros poderiam ser indicadores econômicos, sociais, geográficos etc. Sendo assim, aplique essa metodologia na explicação, trazendo uma BREVE explicação do que é o ajuste de hiperparâmetros já que o interlocutor entende apenas estatística de colegial, e passe logo em seguida para algum exemplo real, utilizando o approach especificado.\""
+   ]
   }
  ],
  "metadata": {
