--- a/PF/prova_final_eng_2024_1.ipynb
+++ b/PF/prova_final_eng_2024_1.ipynb
@@ -556,7 +556,9 @@
    "source": [
     "A acurácia do modelo de referência (dummy classifier) basta prever a classe mais frequente no conjunto de dados. Para calcular a acurácia, podemos usar a fórmula:\n",
     "\n",
-    "$$ \\text{Acurácia} = \\frac{\\text{Número de previsões corretas}}{\\text{Número total de previsões}} $$"
+    "$$ \\text{Acurácia} = \\frac{\\text{Número de previsões corretas}}{\\text{Número total de previsões}} $$\n",
+    "\n",
+    "Sendo que o número de previsões corretas é igual a frequência da classe mais comum no conjunto de dados."
    ]
   },
   {
